--- a/MedicineNurse/MedicineNurse/Base.lproj/LaunchScreen.storyboard
+++ b/MedicineNurse/MedicineNurse/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,11 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="default.png" translatesAutoresizingMaskIntoConstraints="NO" id="yGb-Ct-gjE">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="default.png" translatesAutoresizingMaskIntoConstraints="NO" id="yGb-Ct-gjE">
                                 <rect key="frame" x="0.0" y="129" width="414" height="607"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="医药天使" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMy-2v-4c6">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="医药天使" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMy-2v-4c6">
                                 <rect key="frame" x="0.0" y="47" width="414" height="74"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="74" id="riQ-rO-3SZ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" red="1" green="0.39557655889999999" blue="0.2737789585" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="highlightedColor" red="1" green="0.54256794590000001" blue="0.001330525038" alpha="1" colorSpace="calibratedRGB"/>
@@ -28,6 +32,15 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yGb-Ct-gjE" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="0vg-zG-UaR"/>
+                            <constraint firstItem="kMy-2v-4c6" firstAttribute="trailing" secondItem="yGb-Ct-gjE" secondAttribute="trailing" id="OXA-Xd-L8I"/>
+                            <constraint firstItem="kMy-2v-4c6" firstAttribute="leading" secondItem="yGb-Ct-gjE" secondAttribute="leading" id="eih-cN-bV9"/>
+                            <constraint firstItem="kMy-2v-4c6" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="27" id="hYq-KE-Dac"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="yGb-Ct-gjE" secondAttribute="bottom" id="ryM-Gi-Pfh"/>
+                            <constraint firstItem="yGb-Ct-gjE" firstAttribute="top" secondItem="kMy-2v-4c6" secondAttribute="bottom" constant="8" id="snA-ec-2UH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yGb-Ct-gjE" secondAttribute="trailing" id="vog-wy-KxO"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </viewController>
@@ -37,6 +50,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="default.png" width="750" height="1125"/>
+        <image name="default.png" width="375" height="562"/>
     </resources>
 </document>
